# libcodetips

./: CMakeLists.txt  INSTALL
codetips/: Assistant.cpp  Assistant.hpp  AssistantManager.cpp  AssistantManager.hpp  CMakeLists.txt  CxxAutotext.cpp  CxxAutotext.hpp  HaxeCodetips.cpp  HaxeCodetips.hpp  HaxeInstructor.cpp  HaxeInstructor.hpp  HaxeMessageSyntax.cpp  HaxeMessageSyntax.hpp  HelloWorld.cpp  HelloWorld.hpp  Instructor.cpp  Instructor.hpp  InterpositionClient.cpp  InterpositionClient.hpp  InterpositionServer.cpp  InterpositionServer.hpp  PythonAutotext.cpp  PythonAutotext.hpp  Registry.cpp  Registry.hpp  RubyAutotext.cpp  RubyAutotext.hpp  Supervisor.cpp  Supervisor.hpp  WordPredictor.cpp  XmlAutotext.cpp  XmlAutotext.hpp  XmlOpenTagSyntax.cpp  codetips  codetips.hpp  generics.hpp  haxe.cpp  haxe.hpp
